make cleaning page fully functional; update menu color; add cleaning images; add cleaning.css file;

--- a/how-we-clean.html
+++ b/how-we-clean.html
@@ -59,44 +59,101 @@
 
     <main class="main">
 
-        <section class="authenticity-container container">
-            <div class="row">
-                <div class="col-12 col-lg-7 col-xl-6 mx-auto">
-                    <h1 class="authenticity-title">
+        <article class="container cleaning">
+            <section class="row cleaning-banner">
+                <div class="col-12 ">
+                    <h1 class="infinite-title cleaning-title text-center">
                         How We clean
                     </h1>
 
-                    <p class="authenticity-text text-center">
-                        Effective as of 9th of August 2019
+                    <p class="cleaning-subtitle-text text-center">
+                        We scrub every inch both Inside and Out
                     </p>
-                    <p class="authenticity-text">
-                        <span class="paragraph-privacy">1. GENERAL PROVISIONS</span>
-                        This document uses the same terminology and abbreviations as our Terms of Service document. This
-                        Privacy Policy governs the collection, use and storage of Information obtained from users
-                        through the use of our Site and Services.
-                        <span class="emptySpace"></span>
-                        The Information on users is divided into personally identifiable and non-personally identifiable
-                        Information depending on whether information can identify the user as a specific person.
+
+                    <iframe src="https://player.vimeo.com/video/345594861" class="cleaning-video" frameborder="0"
+                        allowfullscreen="allowfullscreen"></iframe>
+                </div>
+            </section>
+
+            <section class="row cleaning-container">
+                <div class="col-12 col-sm-8 cleaning-text-container">
+                    <p class="infinite-text cleaning-step">
+                        01 / 06
                     </p>
-                    <p class="authenticity-text">
-                        <span class="paragraph-privacy">2. COLLECTION AND USE OF PERSONALLY IDENTIFIABLE
-                            INFORMATION</span>
-                        In order to provide you with our Services we require some personal information. The information
-                        we collect is necessary to provide our Services, and we do not collect any information which is
-                        not strictly required by the nature of the Service. Personal Information which we may collect
-                        includes:
+                    <h4 class="infinite-header cleaning-header">Scrubbing the shoes</h4>
+                    <p class="infinite-text text-grey mb-0">
+                        We scrub every inch of these shoes so they come out spotless and looking like new.
                     </p>
                 </div>
-            </div>
-        </section>
+                <div class="col-12 cleaning-image"></div>
+            </section>
 
-        <section class="action">
-            <h2 class="action-text">
-                Same Sneakers, Better Prices
-            </h2>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Rent Now</a>
-            <img class="action-image" src="images/other/sneakers-privact-policy.png" alt="Just Do It">
-        </section>
+            <section class="row cleaning-container">
+                <div class="col-12 col-sm-8 cleaning-text-container">
+                    <p class="infinite-text cleaning-step">
+                        02 / 06
+                    </p>
+                    <h4 class="infinite-header cleaning-header">Rinsing the Laces</h4>
+                    <p class="infinite-text text-grey mb-0">
+                        Each shoelace is rinsed clean with our solution.
+                    </p>
+                </div>
+                <div class="col-12 cleaning-image cleaning-image-2"></div>
+            </section>
+
+            <section class="row cleaning-container">
+                <div class="col-10 col-sm-8 cleaning-text-container">
+                    <p class="infinite-text cleaning-step">
+                        03 / 06
+                    </p>
+                    <h4 class="infinite-header cleaning-header">Washing the Insoles</h4>
+                    <p class="infinite-text text-grey mb-0">
+                        We wash the insoles to ensure they look and feel fresh.
+                    </p>
+                </div>
+                <div class="col-12 cleaning-image cleaning-image-3"></div>
+            </section>
+
+            <section class="row cleaning-container">
+                <div class="col-12 col-sm-8 cleaning-text-container">
+                    <p class="infinite-text cleaning-step">
+                        04 / 06
+                    </p>
+                    <h4 class="infinite-header cleaning-header">Lint Removal</h4>
+                    <p class="infinite-text text-grey mb-0">
+                        Lint is removed for a crisp inner lining.
+                    </p>
+                </div>
+                <div class="col-12 cleaning-image cleaning-image-4"></div>
+            </section>
+
+            <section class="row cleaning-container">
+                <div class="col-12 col-sm-8 cleaning-text-container">
+                    <p class="infinite-text cleaning-step">
+                        05 / 06
+                    </p>
+                    <h4 class="infinite-header cleaning-header">Smoothing the Creases</h4>
+                    <p class="infinite-text text-grey mb-0">
+                        We carefully smooth out creases to make the shoes look like new.
+                    </p>
+                </div>
+                <div class="col-12 cleaning-image cleaning-image-5"></div>
+            </section>
+
+            <section class="row cleaning-container">
+                <div class="col-12 col-sm-8 cleaning-text-container">
+                    <p class="infinite-text cleaning-step">
+                        06 / 06
+                    </p>
+                    <h4 class="infinite-header cleaning-header">Grading the Sneakers</h4>
+                    <p class="infinite-text text-grey mb-0">
+                        Our team of trained specialists assesses each pair of GOAT Clean shoes and assigns scores
+                        to specific areas. The scores are then combined for an overall grade.
+                    </p>
+                </div>
+            </section>
+
+        </article>
 
     </main>
 
