--- a/create-account.html
+++ b/create-account.html
@@ -62,10 +62,10 @@
 
             <h2 class="infinite-title text-center ">Login</h2>
             <form class="infinite-form infinite-form-validation" novalidate>
-                <a class="infinite-link-dark login-link" href="create-account.html">Create Account</a>
+                <a class="infinite-link-dark login-link" href="index.html">Create Account</a>
                 <div class="form-group">
-                    <input type="email" class="form-control form-field" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="E-mail" required>
+                    <input type="email" class="form-control form-field" id="exampleInputEmail1"
+                        aria-describedby="emailHelp" placeholder="E-mail" required>
                     <small id="emailHelp" class="form-text text-grey">We'll never share your email with anyone
                         else.</small>
                     <div class="invalid-feedback">
@@ -76,19 +76,21 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control form-field" id="exampleInputPassword1" placeholder="Password"
-                        aria-describedby="passwordHelp" required>
-                    <small id="passwordHelp" class="form-text text-grey">Your Password will'be carefuly saved, sleep well.</small>
+                    <input type="password" class="form-control form-field" id="exampleInputPassword1"
+                        placeholder="Password" aria-describedby="passwordHelp" required>
+                    <small id="passwordHelp" class="form-text text-grey">Your Password will'be carefuly saved, sleep
+                        well.</small>
                     <div class="invalid-feedback">
-                            Your password must be 8-20 characters long,
-                            contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                        Your password must be 8-20 characters long,
+                        contain letters and numbers, and must not contain spaces, special characters, or emoji.
                     </div>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <button type="submit" class="infinite-button login-button">Login</button>
-                <a class="infinite-button login-button login-light-button" href="forget-page.html">I Forgot E-mail or Password</a>
+                <a class="infinite-button login-button login-light-button" href="forget-page.html">I Forgot E-mail or
+                    Password</a>
             </form>
 
         </section>
@@ -133,7 +135,6 @@
             </div>
         </div>
     </footer>
-
     <script src="script/validation-form.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
