Infinite Selection Alpha v.0.8.0 add all necessary html files; update all links; remove unnecessary code; Login, Authorization and Lost Password pages fully functional;

--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
-                <a class="basket-icon d-flex d-lg-none" href="#"></a>
+                <a class="basket-icon d-flex d-lg-none"></a>
                 <a class="navbar-brand brand-logo" href="index.html"></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -52,7 +52,7 @@
                         <input class="search_input" type="text" name="" placeholder="Search...">
                         <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
-                    <a class="basket-icon" href="#"></a>
+                    <a class="basket-icon"></a>
                 </div>
             </nav>
         </div>
@@ -74,10 +74,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="#">Contact Us</a>
+                        <a class="footer-link" href="contact-us.html">Contact Us</a>
                         <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
                         <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="#">FAQ</a>
+                        <a class="footer-link" href="faq.html">FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
