--- a/create-account.html
+++ b/create-account.html
@@ -20,7 +20,7 @@
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
-                <a class="basket-icon d-flex d-lg-none" href="#"></a>
+                <a class="basket-icon d-flex d-lg-none"></a>
                 <a class="navbar-brand brand-logo" href="index.html"></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -45,12 +45,12 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
                         <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
-                    <a class="basket-icon" href="#"></a>
+                    <a class="basket-icon"></a>
                 </div>
             </nav>
         </div>
@@ -60,26 +60,67 @@
 
         <section class="container login-layout">
 
-            <h2 class="infinite-title text-center ">Login</h2>
+            <h2 class="infinite-title text-center ">Create Account</h2>
             <form class="infinite-form infinite-form-validation" novalidate>
-                <a class="infinite-link-dark login-link" href="index.html">Create Account</a>
+                <a class="infinite-link-dark login-link" href="login.html">I Already Have an Account</a>
                 <div class="form-group">
-                    <input type="email" class="form-control form-field" id="exampleInputEmail1"
-                        aria-describedby="emailHelp" placeholder="E-mail" required>
-                    <small id="emailHelp" class="form-text text-grey">We'll never share your email with anyone
-                        else.</small>
+                    <input type="text" name="Name" class="form-control form-field" id="exampleInputName"
+                        aria-describedby="nameHelp" placeholder="Name" required>
+                    <small id="nameHelp" class="form-text text-grey">
+                        Better to use a real name.
+                    </small>
                     <div class="invalid-feedback">
-                        Please enter a valid Email address.
+                        Please enter a valid Name.
+                    </div>
+                    <div class="valid-feedback">
+                            Thats right!
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="text" name="Last Name" class="form-control form-field" id="exampleInputLastName"
+                        aria-describedby="lastNameHelp" placeholder="Last Name" required>
+                    <small id="lastNameHelp" class="form-text text-grey">
+                        Better to use a real Last Name.
+                    </small>
+                    <div class="invalid-feedback">
+                        Please enter a valid Last Name.
+                    </div>
+                    <div class="valid-feedback">
+                        Thats right!
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <input type="email" name="Email" class="form-control form-field" id="exampleInputEmail1"
+                        aria-describedby="emailHelp" placeholder="E-mail Address" required>
+                    <small id="emailHelp" class="form-text text-grey">
+                            We'll never share your email with anyone else.
+                    </small>
+                    <div class="invalid-feedback">
+                            Please enter a valid Email address.
                     </div>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control form-field" id="exampleInputPassword1"
-                        placeholder="Password" aria-describedby="passwordHelp" required>
-                    <small id="passwordHelp" class="form-text text-grey">Your Password will'be carefuly saved, sleep
-                        well.</small>
+                    <input type="phone" name="Phone" class="form-control form-field" id="exampleInputPhone"
+                        aria-describedby="phoneHelp" placeholder="Phone Number" required>
+                    <small id="phoneHelp" class="form-text text-grey">
+
+                    </small>
+                    <div class="invalid-feedback">
+                        Please enter a valid Phone Number.
+                    </div>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="password" name="Password" class="form-control form-field" id="exampleInputPassword1"
+                        placeholder="Password" aria-describedby="passwordHelp" minlength="8" maxlength="20" required>
+                    <small id="passwordHelp" class="form-text text-grey">Your Password requires at least 8
+                        characters</small>
                     <div class="invalid-feedback">
                         Your password must be 8-20 characters long,
                         contain letters and numbers, and must not contain spaces, special characters, or emoji.
@@ -88,9 +129,24 @@
                         Looks good!
                     </div>
                 </div>
-                <button type="submit" class="infinite-button login-button">Login</button>
-                <a class="infinite-button login-button login-light-button" href="forget-page.html">I Forgot E-mail or
-                    Password</a>
+                <div class="form-group">
+                    <input type="password" name="Confirm Password" class="form-control form-field"
+                        id="exampleInputPassword1" placeholder="Confirm Password" aria-describedby="passwordHelp"
+                        minlength="8" maxlength="20" required>
+                    <small id="passwordHelp" class="form-text text-grey">Your Passwords must match.</small>
+                    <div class="invalid-feedback">
+                        Your password doesn't seemed to be matched!
+                    </div>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <p class="form-paragraph">
+                    Creating an account means you agree to our
+                    <a class="form-links" href="terms-of-service.html">Terms</a> and
+                    <a class="form-links" href="privacy-policy.html">Privacy Policy</a>
+                </p>
+                <button type="submit" class="infinite-button login-button">Continue</button>
             </form>
 
         </section>
@@ -107,10 +163,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="#">Contact Us</a>
+                        <a class="footer-link" href="contact-us.html">Contact Us</a>
                         <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
                         <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="#">FAQ</a>
+                        <a class="footer-link" href="faq.html">FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
@@ -135,6 +191,8 @@
             </div>
         </div>
     </footer>
+
+
     <script src="script/validation-form.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
