--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
-                <a class="basket-icon d-flex d-lg-none" href="#"></a>
+                <a class="basket-icon d-flex d-lg-none"></a>
                 <a class="navbar-brand brand-logo" href="#topPage"></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="mobileMenu"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex juctify-content-between">
                         <li class="nav-item ">
@@ -50,7 +49,7 @@
                         <input class="search_input" type="text" name="" placeholder="Search...">
                         <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
-                    <a class="basket-icon" href="#"></a>
+                    <a class="basket-icon"></a>
                 </div>
             </nav>
         </div>
@@ -349,10 +348,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="#">Contact Us</a>
+                        <a class="footer-link" href="contact-us.html">Contact Us</a>
                         <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
                         <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="#">FAQ</a>
+                        <a class="footer-link" href="faq.html">FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
