--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     <header class="header" id="topPage">
         <div class="fixed-top bg-white">
             <nav class="navbar navbar-expand-lg  container">
-                <a class="basket-icon d-flex d-lg-none" href="#"></a>
+                <a class="basket-icon d-flex d-lg-none"></a>
                 <a class="navbar-brand brand-logo" href="index.html"></a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -45,12 +45,12 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
                         <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
-                    <a class="basket-icon" href="#"></a>
+                    <a class="basket-icon"></a>
                 </div>
             </nav>
         </div>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control form-field" id="exampleInputPassword1" placeholder="Password"
-                        aria-describedby="passwordHelp" required>
+                        aria-describedby="passwordHelp" minlength="8" maxlength="20" required>
                     <small id="passwordHelp" class="form-text text-grey">Your Password will'be carefuly saved, sleep well.</small>
                     <div class="invalid-feedback">
                             Your password must be 8-20 characters long,
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <button type="submit" class="infinite-button login-button">Login</button>
-                <a class="infinite-button login-button login-light-button" href="forget-page.html">I Forgot E-mail or Password</a>
+                <a class="infinite-button login-button login-light-button" href="lost-password.html">I Forgot E-mail or Password</a>
             </form>
 
         </section>
@@ -105,10 +105,10 @@
                 </div>
                 <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
-                        <a class="footer-link" href="#">Contact Us</a>
+                        <a class="footer-link" href="contact-us.html">Contact Us</a>
                         <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
                         <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
-                        <a class="footer-link" href="#">FAQ</a>
+                        <a class="footer-link" href="faq.html">FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
