add search.html fix footer text issue when resizing to 992px - 1200px; add content to search.html and now it works fine; get some troubles with js search algorithm; update style.css;

--- a/search.html
+++ b/search.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="how-we-clean.html">How We Clean</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link current-link" href="ways-to-rent.html">Ways to Rent</a>
+                            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="authenticity-guarantee.html">Authenticity
@@ -60,8 +60,215 @@
 
     <main class="main">
 
+        <section class="container search">
 
-        
+            <form class="search-form">
+                <div class="form-group search-input-container">
+                    <input type="text" class="form-control search-input" id="exampleInputText"
+                        placeholder="Air Jordan 1" autocomplete="off">
+                </div>
+                <button type="submit" class="button-search mx-auto">Submit</button>
+            </form>
+
+            <div class="row search-section">
+                <div class="col-12 sneakers-browse-container">
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-1.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-2.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-3.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-4.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-5.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-6.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-7.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-8.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-9.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-10.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-11.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-12.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-1.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-2.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-3.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-4.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-5.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-6.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-7.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-8.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-9.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-10.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-11.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                    <div class="browse-item">
+                        <a href="example.html" class="browse-item-link">
+                            <img class="browse-image" src="images/releases/releases-12.png" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
     <footer class="footer">
@@ -102,7 +309,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
