--- a/browse-sneakers.html
+++ b/browse-sneakers.html
@@ -58,15 +58,285 @@
 
     <main class="main">
 
-        <section class="container">
+        <article class="container browse">
             <div class="row">
-                <div class="col-12 col-lg-7 col-xl-6 mx-auto">
-                    <h1 class="authenticity-title">
-                        Browse
-                    </h1>
-                </div>
+                <section class="col-12 col-xl-3 browse-filter">
+                    <h3 class="infinite-text-title browse-top-line">
+                        Filters
+                    </h3>
+                    <div class="filter-brands">
+                        <h4 class="infinite-header-small">Brands</h4>
+                        <div class="btn-group btn-group-toggle browse-select" data-toggle="buttons">
+                            <label class="btn browse-button brands-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand1"
+                                    autocomplete="off" checked> Adidas
+                            </label>
+                            <label class="btn browse-button brands-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand2"
+                                    autocomplete="off"> Nike
+                            </label>
+                            <label class="btn browse-button brands-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand3"
+                                    autocomplete="off"> Balenciaga
+                            </label>
+                            <label class="btn browse-button brands-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand4"
+                                    autocomplete="off" checked> Yeezy
+                            </label>
+                            <label class="btn browse-button brands-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand5"
+                                    autocomplete="off"> Jordan
+                            </label>
+                            <label class="btn browse-button brands-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand6"
+                                    autocomplete="off"> Puma
+                            </label>
+                        </div>
+                    </div>
+                    <div class="filter-sizes">
+                        <h4 class="infinite-header-small">US Sizes</h4>
+                        <div class="btn-group btn-group-toggle browse-select" data-toggle="buttons">
+                            <label class="btn browse-button size-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand1"
+                                    autocomplete="off" checked> 8
+                            </label>
+                            <label class="btn browse-button size-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand2"
+                                    autocomplete="off"> 9
+                            </label>
+                            <label class="btn browse-button size-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand3"
+                                    autocomplete="off"> 10
+                            </label>
+                            <label class="btn browse-button size-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand4"
+                                    autocomplete="off" checked> 11
+                            </label>
+                            <label class="btn browse-button size-button">
+                                <input type="checkbox" class="browse-checkbox" name="options" id="brand5"
+                                    autocomplete="off"> 12
+                            </label>
+                        </div>
+                    </div>
+                    <div class="filter-sizes">
+                        <h4 class="infinite-header-small">Availability</h4>
+                        <div class="form-group browse-select">
+                            <div class="input-group date" id="datetimepicker" data-target-input="nearest">
+                                <input type="text" class="form-control datetimepicker-input"
+                                    data-target="#datetimepicker" />
+                                <div class="input-group-append" data-target="#datetimepicker"
+                                    data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                </section>
+                <section class="col-12 col-xl-9 browse-main">
+                    <div class="col-12 browse-main-top browse-top-line">
+                        <h1 class="infinite-header">
+                            Browse Sneakers
+                        </h1>
+                        <p class="infinite-text">
+                            24 Result
+                        </p>
+                    </div>
+                    <div class="col-12 sneakers-browse-container">
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-1.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-2.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-3.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-4.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-5.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-6.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-7.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-8.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-9.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-10.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-11.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-12.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-1.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-2.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-3.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-4.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-5.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-6.jpg" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-7.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-8.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-9.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-10.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-11.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                        <div class="browse-item">
+                            <a href="example.html" class="browse-item-link">
+                                <img class="browse-image" src="images/releases/releases-12.png" alt="sneakers">
+                                <p class="releases-title">Adidas Yeezy 500</p>
+                                <p class="releases-value">&#36;330 Value</p>
+                                <p class="releases-cost">&#36;130</p>
+                            </a>
+                        </div>
+                    </div>
+                </section>
             </div>
-        </section>
+        </article>
 
     </main>
 
@@ -118,6 +388,21 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <!-- Moment.js -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <!-- DateTime -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js">
+    </script>
+    <link rel="stylesheet" href="style/tempusdominus-bootstrap-4.min.css">
+    <script type="text/javascript">
+        $(function () {
+            $('#datetimepicker').datetimepicker({
+                allowMultidate: true,
+                multidateSeparator: ','
+            });
+        });
     </script>
 </body>
 
