Day 9. Contacts. add contacts page and necessary files; minor fixes;

--- a/browse-sneakers.html
+++ b/browse-sneakers.html
@@ -60,7 +60,7 @@
 
         <article class="container browse">
             <div class="row">
-                <section class="col-12 col-xl-3 browse-filter">
+                <section class="col-12 col-md-8 col-lg-6 col-xl-3 browse-filter">
                     <h3 class="infinite-text-title browse-top-line">
                         Filters
                     </h3>
