Day 10. Example Page. add example page for sneakers; add necessary files for this page; minor deletions;

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     </header>
 
     <main class="main">
-        <div class="container intro-container">
+        
+        <section class="container intro-container">
             <div class="row intro">
                 <div class="col-lg-4 col-xl-5 order-2 order-lg-1">
                     <div class="description-column">
@@ -74,9 +75,9 @@
                     <img class="animate rightSneaker" src="images/intro/rightSneaker.png" alt="">
                 </div>
             </div>
-        </div>
-        
-        <div class="container">
+        </section>
+
+        <section class="container releases-section">
             <div class="row releases">
                 <div class="col-12 releases-line d-flex justify-content-between">
                     <h3 class="infinite-header">
@@ -135,7 +136,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <section class="homepage-authenticity">
             <div class="container">
