Day 11. Minor fixes. add new paddings and margins to homepage; fix issues on mobile version;

--- a/example.html
+++ b/example.html
@@ -127,7 +127,7 @@
             <p class="infinite-header-small description-subheader">
                 Choose a Way to Rent
             </p>
-            <a href="browse-sneakers.html" class="infinite-button button-white description-link">One Time Rental</a>
+            <button class="infinite-button button-white description-link">One Time Rental</button>
             <div class="description-meta">
                 <p class="infinite-text description-meta-item">
                     <span class="condition-text-main">SKU</span>
@@ -228,7 +228,6 @@
                     </a>
                 </div>
             </div>
-            <a href="browse-sneakers.html" class="infinite-button action-link">Unlimited Rentals</a>
         </section>
 
     </main>
