new update 1.3 replace search script, minor fixes.

--- a/app/login.html
+++ b/app/login.html
@@ -47,7 +47,7 @@
                 <div class="authorization-layout d-none d-lg-flex">
                     <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
-                        <input class="search_input" type="text" name="" placeholder="Search...">
+                        <input class="search_input" type="text" name="" placeholder="Search..." required>
                         <a href="search.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon"></a>
