--- a/app/search.html
+++ b/app/search.html
@@ -75,7 +75,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-1.jpg" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Nike Air 98</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
@@ -91,7 +91,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-3.jpg" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Adidas 300</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
@@ -99,7 +99,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-4.jpg" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Balenciaga</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
@@ -123,7 +123,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-7.png" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Nike GodFear</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
@@ -131,7 +131,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-8.png" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Puma Seventies</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
@@ -147,7 +147,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-10.png" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Puma Nineties</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
@@ -163,7 +163,7 @@
                     <div class="browse-item">
                         <a href="example.html" class="browse-item-link">
                             <img class="browse-image" src="images/releases/releases-12.png" alt="sneakers">
-                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-title">Balenciaga</p>
                             <p class="releases-value">&#36;330 Value</p>
                             <p class="releases-cost">&#36;130</p>
                         </a>
