--- a/index.html
+++ b/index.html
@@ -340,16 +340,16 @@
         </li>
         <li class='main__item'>
           <article class='main__article'>
-            <h2 class='main__title'>Contact Us</h2>
+            <h2 class='main__title'>404 - Not found</h2>
             <a
               class='main__link main__link--default'
               href='./pages/contact-us.html'
-              title='Contact Us'
-              aria-label='Link to Contact Us page.'
+              title='404 - Not found'
+              aria-label='Link to 404 - Not found page.'
             >
               <img
                 src='./assets/previews/1000_default.svg'
-                alt='Preview image for Contact Us.'
+                alt='Preview image for 404 - Not found.'
                 loading='lazy'
               />
             </a>
@@ -548,7 +548,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">пт, 3 сент. 2021 г., 21:08</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">сб, 4 сент. 2021 г., 00:48</span></span>
     </div>
   </footer>
 </div>
